First round of importing old code. Updated non-game interface to react-redux state management

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "fontfaceobserver": "2.1.0",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
+    "honeycomb-grid": "^2.0.3",
     "immer": "3.0.0",
     "intl": "1.2.5",
     "invariant": "2.2.4",
@@ -81,6 +82,7 @@
     "minimist": "1.2.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
